--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "note_library_frontend",
+  "name": "note-library-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
